k8s/apps/leachnet/ln-home/evcc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evcc
  namespace: ln-home
spec:
  selector:
    matchLabels:
      app: evcc
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: evcc
    spec:
      nodeSelector:
        kubernetes.io/hostname: nagoya
      imagePullSecrets:
         - name: dockerconfigjson-github-com
      containers:
        - name: evcc
          image: ghcr.io/duckfullstop/evcc-hacky:latest
          # resources:
          #  requests:
          #    memory: "50Mi"
          #    cpu: "10m"
          #  limits:
          #    memory: "1Gi"
          #    cpu: "2"
          ports:
          - containerPort: 7070
            protocol: TCP
            name: http
          volumeMounts:
          - name: config
            mountPath: /etc/evcc.yaml
            readOnly: true
            subPath: evcc.yaml
          - name: persist
            mountPath: /root/.evcc
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/evcc
                - health
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 30
          startupProbe:
            exec:
              command:
                - /usr/local/bin/evcc
                - health
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 10
      volumes:
      - name: config
        secret:
          secretName: evcc-config
      - name: persist
        persistentVolumeClaim:
          claimName: evcc-data
