k8s/apps/leachnet/ln-home/evcc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evcc
spec:
  ports:
  - name: http
    port: 7070
    targetPort: http
  selector:
    app: evcc
