k8s/apps/leachnet/ln-home/evcc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-system-ak-outpost-leachnet-proxy-outpost@kubernetescrd
  name: evcc
  namespace: ln-home
spec:
  rules:
  - host: evcc.net.theleachfamily.me.uk
    http:
      paths:
      - backend:
          service:
            name: evcc
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - evcc.net.theleachfamily.me.uk
    secretName: evcc-cert
